<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="10dp"
            android:paddingTop="12dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.85">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/shubuh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:fontFamily="@font/inter_medium"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:paddingStart="15dp"
                    android:paddingEnd="0dp"
                    android:text="@string/shubuh"/>

                <TextView
                    android:id="@+id/waktuShubuh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:fontFamily="@font/inter_medium"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:gravity="end"
                    android:paddingEnd="15dp"
                    android:paddingStart="0dp"
                    android:layout_weight="1"
                    android:text="04:24" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                app:dividerColor="@color/abu50"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_gravity="bottom"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/syuruq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:fontFamily="@font/inter_medium"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:paddingStart="15dp"
                    android:paddingEnd="0dp"
                    android:text="@string/syuruq"/>

                <TextView
                    android:id="@+id/waktuSyuruq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:fontFamily="@font/inter_medium"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:gravity="end"
                    android:paddingEnd="15dp"
                    android:paddingStart="0dp"
                    android:layout_weight="1"
                    android:text="04:24" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                app:dividerColor="@color/abu50"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_gravity="bottom"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dzuhur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:fontFamily="@font/inter_medium"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:paddingStart="15dp"
                    android:paddingEnd="0dp"
                    android:text="@string/dzuhur"/>

                <TextView
                    android:id="@+id/waktuDzuhur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:fontFamily="@font/inter_medium"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:gravity="end"
                    android:paddingEnd="15dp"
                    android:paddingStart="0dp"
                    android:layout_weight="1"
                    android:text="04:24" />
            </androidx.appcompat.widget.LinearLayoutCompat>
            <com.google.android.material.divider.MaterialDivider
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                app:dividerColor="@color/abu50"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_gravity="bottom"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ashar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:fontFamily="@font/inter_medium"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:paddingStart="15dp"
                    android:paddingEnd="0dp"
                    android:text="@string/ashar"/>

                <TextView
                    android:id="@+id/waktuAshar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:fontFamily="@font/inter_medium"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:gravity="end"
                    android:paddingEnd="15dp"
                    android:paddingStart="0dp"
                    android:layout_weight="1"
                    android:text="04:24" />
            </androidx.appcompat.widget.LinearLayoutCompat>
            <com.google.android.material.divider.MaterialDivider
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                app:dividerColor="@color/abu50"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_gravity="bottom"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/maghrib"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:fontFamily="@font/inter_medium"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:paddingStart="15dp"
                    android:paddingEnd="0dp"
                    android:text="@string/maghrib"/>

                <TextView
                    android:id="@+id/waktuMaghrib"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:fontFamily="@font/inter_medium"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:gravity="end"
                    android:paddingEnd="15dp"
                    android:paddingStart="0dp"
                    android:layout_weight="1"
                    android:text="04:24" />
            </androidx.appcompat.widget.LinearLayoutCompat>
            <com.google.android.material.divider.MaterialDivider
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                app:dividerColor="@color/abu50"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_gravity="bottom"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/isya"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:fontFamily="@font/inter_medium"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:paddingStart="15dp"
                    android:paddingEnd="0dp"
                    android:text="@string/isya"/>

                <TextView
                    android:id="@+id/waktuIsya"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:fontFamily="@font/inter_medium"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:gravity="end"
                    android:paddingEnd="15dp"
                    android:paddingStart="0dp"
                    android:layout_weight="1"
                    android:text="04:24" />
            </androidx.appcompat.widget.LinearLayoutCompat>
            <com.google.android.material.divider.MaterialDivider
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                app:dividerColor="@color/abu50"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_gravity="bottom"/>


        </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>