<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipeRefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/abuF7_light_night"
            android:paddingBottom="16dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btnLogout"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:visibility="invisible"
                android:background="@drawable/ic_logout"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="@id/flHome"
                app:layout_constraintBottom_toTopOf="@id/flHome"/>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tadzkiir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:text="@string/tadzkiir"
                android:textColor="@color/light_night_color"
                android:textSize="24sp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/tasbih"
                android:layout_width="69dp"
                android:layout_height="69dp"
                app:layout_constraintDimensionRatio="1:1"
                android:background="@drawable/ic_tasbih_icon"
                android:backgroundTint="@color/light_night_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tadzkiir"
                app:layout_constraintStart_toStartOf="parent"/>

            <FrameLayout
                android:id="@+id/flHome"
                android:layout_width="0dp"
                android:layout_height="125dp"
                android:minHeight="113dp"
                android:elevation="3dp"
                app:cardElevation="3dp"
                app:layout_constraintTop_toBottomOf="@id/tasbih"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_home1"
                    android:padding="8dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:fontFamily="@font/inter_medium"
                        android:textSize="16sp"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:layout_gravity="top"
                        android:gravity="start|center"
                        android:text="@string/tv_welcome"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>


                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:fontFamily="@font/inter_semibold"
                        android:textSize="16sp"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:layout_gravity="center"
                        android:gravity="end|center"
                        android:text="@string/sudahkah_anda_berdzikir_hari_ini"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>
                </androidx.appcompat.widget.LinearLayoutCompat>

            </FrameLayout>

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/flHome"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <include layout="@layout/shimmer_placeholder_item_menu_home2"/>

                </androidx.appcompat.widget.LinearLayoutCompat>
            </com.facebook.shimmer.ShimmerFrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/shimmer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:cardCornerRadius="15dp"
                android:elevation="3dp"
                app:cardElevation="3dp"
                tools:listitem="@layout/item_menu_home"
                android:layout_marginTop="30dp"
                android:nestedScrollingEnabled="true"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>